--- a/product-details.html
+++ b/product-details.html
@@ -450,10 +450,10 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="shop.html">All Products</a></li>
-                                    <li><a href="locations.html">Locations Map</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">All Products</a></li>
+                                    <li><a href="#">Locations Map</a></li>
+                                    <li><a href="#">FAQ</a></li>
                                     <li><a href="contact.html">Contact us</a></li>
                                 </ul>
                             </div>
@@ -464,10 +464,10 @@
                             <h4 class="footer-title">Services</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="order-tracking.html">Order tracking</a></li>
-                                    <li><a href="wishlist.html">Wish List</a></li>
+                                    <li><a href="#">Order tracking</a></li>
+                                    <li><a href="#">Wish List</a></li>
                                     <li><a href="login.html">Login</a></li>
-                                    <li><a href="account.html">My account</a></li>
+                                    <li><a href="#">My account</a></li>
                                     <li><a href="about.html">Terms & Conditions</a></li>
                                     <li><a href="about.html">Promotional Offers</a></li>
                                 </ul>
@@ -480,10 +480,10 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="login.html">Login</a></li>
-                                    <li><a href="account.html">My account</a></li>
-                                    <li><a href="wishlist.html">Wish List</a></li>
-                                    <li><a href="order-tracking.html">Order tracking</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
+                                    <li><a href="#">My account</a></li>
+                                    <li><a href="#">Wish List</a></li>
+                                    <li><a href="#">Order tracking</a></li>
+                                    <li><a href="#">FAQ</a></li>
                                     <li><a href="contact.html">Contact us</a></li>
                                 </ul>
                             </div>
