--- a/login.html
+++ b/login.html
@@ -361,10 +361,10 @@
                         <div class="footer-widget footer-about-widget">
                             <div class="footer-logo">
                                 <div class="site-logo">
-                                    <img src="img/logo-2.png" alt="Logo">
+                                    <img src="img/logo.png" alt="Logo">
                                 </div>
                             </div>
-                            <p>Lorem Ipsum is simply dummy text of the and typesetting industry. Lorem Ipsum is dummy text of the printing.</p>
+                            <p>Investment & Strategy is a full service property and finance investment company</p>
                             <div class="footer-address">
                                 <ul>
                                     <li>
@@ -388,7 +388,7 @@
                                             <i class="icon-mail"></i>
                                         </div>
                                         <div class="footer-address-info">
-                                            <p><a href="mailto:example@example.com">example@example.com</a></p>
+                                            <p><a href="mailto: info@investmentandstrategy.com.au"> info@investmentandstrategy.com.au</a></p>
                                         </div>
                                     </li>
                                 </ul>
@@ -396,9 +396,8 @@
                             <div class="ltn__social-media mt-20">
                                 <ul>
                                     <li><a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="#" title="Instagram"><i class="fab fa-instagram"></i></a></li>
                                     <li><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#" title="Linkedin"><i class="fab fa-linkedin"></i></a></li>
-                                    <li><a href="#" title="Youtube"><i class="fab fa-youtube"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -409,10 +408,10 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="shop.html">All Products</a></li>
-                                    <li><a href="locations.html">Locations Map</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">All Products</a></li>
+                                    <li><a href="#">Locations Map</a></li>
+                                    <li><a href="#">FAQ</a></li>
                                     <li><a href="contact.html">Contact us</a></li>
                                 </ul>
                             </div>
@@ -423,10 +422,10 @@
                             <h4 class="footer-title">Services</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="order-tracking.html">Order tracking</a></li>
-                                    <li><a href="wishlist.html">Wish List</a></li>
+                                    <li><a href="#">Order tracking</a></li>
+                                    <li><a href="#">Wish List</a></li>
                                     <li><a href="login.html">Login</a></li>
-                                    <li><a href="account.html">My account</a></li>
+                                    <li><a href="#">My account</a></li>
                                     <li><a href="about.html">Terms & Conditions</a></li>
                                     <li><a href="about.html">Promotional Offers</a></li>
                                 </ul>
@@ -439,10 +438,10 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="login.html">Login</a></li>
-                                    <li><a href="account.html">My account</a></li>
-                                    <li><a href="wishlist.html">Wish List</a></li>
-                                    <li><a href="order-tracking.html">Order tracking</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
+                                    <li><a href="#">My account</a></li>
+                                    <li><a href="#">Wish List</a></li>
+                                    <li><a href="#">Order tracking</a></li>
+                                    <li><a href="#">FAQ</a></li>
                                     <li><a href="contact.html">Contact us</a></li>
                                 </ul>
                             </div>
@@ -460,8 +459,7 @@
                                     </div>
                                 </form>
                             </div>
-                            <h5 class="mt-30">We Accept</h5>
-                            <img src="img/icons/payment-4.png" alt="Payment Image">
+                            
                         </div>
                     </div>
                 </div>
@@ -472,15 +470,14 @@
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p>All Rights Reserved @ Company <span class="current-year"></span></p>
+                            <p>Investment and Strategy Powered by KPVE Group <span class="current-year"></span></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-12 align-self-center">
                         <div class="ltn__copyright-menu text-end">
                             <ul>
                                 <li><a href="#">Terms & Conditions</a></li>
-                                <li><a href="#">Claim</a></li>
-                                <li><a href="#">Privacy & Policy</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
                             </ul>
                         </div>
                     </div>
