--- a/product-details.html
+++ b/product-details.html
@@ -286,7 +286,7 @@
     <!-- BREADCRUMB AREA END -->
 
     <!-- IMAGE SLIDER AREA START (img-slider-3) -->
-    <!-- <div class="ltn__img-slider-area mb-90">
+    <div class="ltn__img-slider-area mb-90">
         <div class="container-fluid">
             <div class="row ltn__image-slider-5-active slick-arrow-1 slick-arrow-1-inner ltn__no-gutter-all">
                 <div class="col-lg-12">
@@ -306,7 +306,7 @@
               
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- IMAGE SLIDER AREA END -->
 
     <!-- SHOP DETAILS AREA START -->
