--- a/contact.html
+++ b/contact.html
@@ -331,28 +331,28 @@
     </div>
     <!-- CONTACT MESSAGE AREA END -->
 
-    <!-- CALL TO ACTION START (call-to-action-6) -->
-    <div class="ltn__call-to-action-area call-to-action-6 before-bg-bottom" data-bs-bg="img/1.jpg--">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="call-to-action-inner call-to-action-inner-6 ltn__secondary-bg position-relative text-center---">
-                        <div class="coll-to-info text-color-white">
-                            <h1>Looking for a dream home?</h1>
-                            <p>We can help you realize your dream of a new home</p>
-                        </div>
-                        <div class="btn-wrapper">
-                            <a class="btn btn-effect-3 btn-white" href="contact.html">Explore Properties <i class="icon-next"></i></a>
-                        </div>
+  <!-- CALL TO ACTION START (call-to-action-6) -->
+  <div class="ltn__call-to-action-area call-to-action-6 before-bg-bottom" data-bs-bg="img/1.jpg--">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="call-to-action-inner call-to-action-inner-6 ltn__secondary-bg position-relative text-center---">
+                    <div class="coll-to-info text-color-white">
+                        <h1>Browse our current properties list</h1>
+                        <p>Your property investment journey starts here</p>
+                    </div>
+                    <div class="btn-wrapper">
+                        <a class="btn btn-effect-3 btn-white" href="contact.html">Explore Properties <i class="icon-next"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- CALL TO ACTION END -->
+</div>
+<!-- CALL TO ACTION END -->
 
- <!-- FOOTER AREA START -->
- <footer class="ltn__footer-area  ">
+<!-- FOOTER AREA START -->
+<footer class="ltn__footer-area  ">
     <div class="footer-top-area  section-bg-2 plr--5">
         <div class="container-fluid">
             <div class="row">
@@ -366,7 +366,7 @@
                         <p>Investment & Strategy is a full service property and finance investment company</p>
                         <div class="footer-address">
                             <ul>
-                                
+                               
                                 <li>
                                     <div class="footer-address-icon">
                                         <i class="icon-mail"></i>
@@ -388,15 +388,13 @@
                 </div>
                 <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                     <div class="footer-widget footer-menu-widget clearfix">
-                        <h4 class="footer-title">Company</h4>
+                        <h4 class="footer-title">About</h4>
                         <div class="footer-menu">
                             <ul>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">All Products</a></li>
-                                <li><a href="#">Locations Map</a></li>
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="contact.html">Contact us</a></li>
+                                <li><a href="https://investmentandstrategy.netlify.app/about.html">About Us</a></li>
+                                <li><a href="https://investmentandstrategy.netlify.app/index.html#news">News</a></li>
+                                <li><a href="https://investmentandstrategy.netlify.app/index.html#faq">FAQ's</a></li>
+                                <li><a href="https://investmentandstrategy.netlify.app/testimonial.html">Testimonials</a></li>
                             </ul>
                         </div>
                     </div>
@@ -406,27 +404,20 @@
                         <h4 class="footer-title">Services</h4>
                         <div class="footer-menu">
                             <ul>
-                                <li><a href="#">Order tracking</a></li>
-                                <li><a href="#">Wish List</a></li>
-                                <li><a href="login.html">Login</a></li>
-                                <li><a href="#">My account</a></li>
-                                <li><a href="about.html">Terms & Conditions</a></li>
-                                <li><a href="about.html">Promotional Offers</a></li>
+                                <li><a href="https://investmentandstrategy.netlify.app/login.html">Login</a></li>
+                                <li><a href="https://investmentandstrategy.netlify.app/login.html">My Account</a></li>
+                                <li><a href="https://investmentandstrategy.netlify.app/product-details.html">Listing</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                     <div class="footer-widget footer-menu-widget clearfix">
-                        <h4 class="footer-title">Customer Care</h4>
+                        <h4 class="footer-title">Company</h4>
                         <div class="footer-menu">
                             <ul>
-                                <li><a href="login.html">Login</a></li>
-                                <li><a href="#">My account</a></li>
-                                <li><a href="#">Wish List</a></li>
-                                <li><a href="#">Order tracking</a></li>
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="contact.html">Contact us</a></li>
+                                <li><a href="#">Partners</a></li>
+                                <li><a href="https://investmentandstrategy.netlify.app/contact.html">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
