--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
                 <i class="fa fa-play"></i>
             </a>
         </div>
-    </div>testi
+    </div>
     <!-- VIDEO AREA END -->
     
 
@@ -944,7 +944,7 @@
     <!-- BRAND LOGO AREA END -->
 
     <!-- BLOG AREA START (blog-3) -->
-    <div class="ltn__blog-area pt-115--- pb-70">
+    <div class="ltn__blog-area pt-115--- pb-70" id="news">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -1173,15 +1173,13 @@
                     </div>
                     <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget footer-menu-widget clearfix">
-                            <h4 class="footer-title">Company</h4>
+                            <h4 class="footer-title">About</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">All Products</a></li>
-                                    <li><a href="#">Locations Map</a></li>
-                                    <li><a href="#">FAQ</a></li>
-                                    <li><a href="contact.html">Contact us</a></li>
+                                    <li><a href="https://investmentandstrategy.netlify.app/about.html">About Us</a></li>
+                                    <li><a href="https://investmentandstrategy.netlify.app/index.html#news">News</a></li>
+                                    <li><a href="https://investmentandstrategy.netlify.app/index.html#faq">FAQ's</a></li>
+                                    <li><a href="https://investmentandstrategy.netlify.app/testimonial.html">Testimonials</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -1191,27 +1189,20 @@
                             <h4 class="footer-title">Services</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="#">Order tracking</a></li>
-                                    <li><a href="#">Wish List</a></li>
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="#">My account</a></li>
-                                    <li><a href="about.html">Terms & Conditions</a></li>
-                                    <li><a href="about.html">Promotional Offers</a></li>
+                                    <li><a href="https://investmentandstrategy.netlify.app/login.html">Login</a></li>
+                                    <li><a href="https://investmentandstrategy.netlify.app/login.html">My Account</a></li>
+                                    <li><a href="https://investmentandstrategy.netlify.app/product-details.html">Listing</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-6 col-sm-6 col-12">
                         <div class="footer-widget footer-menu-widget clearfix">
-                            <h4 class="footer-title">Customer Care</h4>
+                            <h4 class="footer-title">Company</h4>
                             <div class="footer-menu">
                                 <ul>
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="#">My account</a></li>
-                                    <li><a href="#">Wish List</a></li>
-                                    <li><a href="#">Order tracking</a></li>
-                                    <li><a href="#">FAQ</a></li>
-                                    <li><a href="contact.html">Contact us</a></li>
+                                    <li><a href="#">Partners</a></li>
+                                    <li><a href="https://investmentandstrategy.netlify.app/contact.html">Contact us</a></li>
                                 </ul>
                             </div>
                         </div>
