--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                                         </li>
                                         <li class="menu-icon"><a href="about.html">About</a>
                                         </li>
-                                        <li class="menu-icon"><a href="product-details.html">Property</a>
+                                        <li class="menu-icon"><a href="product-details.html">Property +</a>
                                             <ul>
-                                                <li><a href="product-details.html">Property 1</a></li>
-                                                <li><a href="product-details.html">Property 2</a></li>
+                                                <li><a href="product-details.html">SDA Homes</a></li>
+                                                <li><a href="product-details.html">Available Homes</a></li>
                                             </ul>
                                         </li>
                                             
