--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                         </li>
                                         <li class="menu-icon"><a href="about.html">About</a>
                                         </li>
-                                        <li class="menu-icon"><a href="product-details.html">Property +</a>
+                                        <li class="menu-icon"><a href="product-details.html">Property</a>
                                             
                                         </li>
                                             
