--- a/product-details.html
+++ b/product-details.html
@@ -271,11 +271,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="ltn__breadcrumb-inner">
-                        <h1 class="page-title">Product Details</h1>
+                        <h1 class="page-title">6 Ayesha</h1>
                         <div class="ltn__breadcrumb-list">
                             <ul>
                                 <li><a href="index.html"><span class="ltn__secondary-color"><i class="fas fa-home"></i></span> Home</a></li>
-                                <li>Product Details</li>
+                                <li>Property Details</li>
                             </ul>
                         </div>
                     </div>
@@ -285,6 +285,7 @@
     </div>
     <!-- BREADCRUMB AREA END -->
 
+    
     <!-- IMAGE SLIDER AREA START (img-slider-3) -->
     <div class="ltn__img-slider-area mb-90">
         <div class="container-fluid">
