--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                         </li> <li class="menu-icon"><a href="testimonial.html">Testimonial</a>
                                             
                                         </li>
-                                        <!-- <li class="menu-icon"><a href="#">News</a> -->
+                                        <li class="menu-icon"><a href="blog-details.html">News</a>
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
@@ -968,7 +968,7 @@
                             <div class="ltn__blog-meta">
                                 <ul>
                                     <li class="ltn__blog-author">
-                                        <a href="#"><i class="far fa-user"></i>by: Admin</a>
+                                        <a href="#"><i class="far fa-user"></i>by: I&S </a>
                                     </li>
                                     <li class="ltn__blog-tags">
                                         <a href="#"><i class="fas fa-tags"></i>Decorate</a>
@@ -999,7 +999,7 @@
                             <div class="ltn__blog-meta">
                                 <ul>
                                     <li class="ltn__blog-author">
-                                        <a href="#"><i class="far fa-user"></i>by: Admin</a>
+                                        <a href="#"><i class="far fa-user"></i>by: I&S </a>
                                     </li>
                                     <li class="ltn__blog-tags">
                                         <a href="#"><i class="fas fa-tags"></i>Interior</a>
@@ -1030,7 +1030,7 @@
                             <div class="ltn__blog-meta">
                                 <ul>
                                     <li class="ltn__blog-author">
-                                        <a href="#"><i class="far fa-user"></i>by: Admin</a>
+                                        <a href="#"><i class="far fa-user"></i>by: I&S </a>
                                     </li>
                                     <li class="ltn__blog-tags">
                                         <a href="#"><i class="fas fa-tags"></i>Estate</a>
@@ -1061,7 +1061,7 @@
                             <div class="ltn__blog-meta">
                                 <ul>
                                     <li class="ltn__blog-author">
-                                        <a href="#"><i class="far fa-user"></i>by: Admin</a>
+                                        <a href="#"><i class="far fa-user"></i>by: I&S </a>
                                     </li>
                                     <li class="ltn__blog-tags">
                                         <a href="#"><i class="fas fa-tags"></i>Room</a>
@@ -1092,7 +1092,7 @@
                             <div class="ltn__blog-meta">
                                 <ul>
                                     <li class="ltn__blog-author">
-                                        <a href="#"><i class="far fa-user"></i>by: Admin</a>
+                                        <a href="#"><i class="far fa-user"></i>by: I&S </a>
                                     </li>
                                     <li class="ltn__blog-tags">
                                         <a href="#"><i class="fas fa-tags"></i>Trends</a>
@@ -1139,8 +1139,8 @@
     </div>
     <!-- CALL TO ACTION END -->
 
-    <!-- FOOTER AREA START -->
-    <footer class="ltn__footer-area  ">
+     <!-- FOOTER AREA START -->
+     <footer class="ltn__footer-area  ">
         <div class="footer-top-area  section-bg-2 plr--5">
             <div class="container-fluid">
                 <div class="row">
@@ -1180,7 +1180,7 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="https://investmentandstrategy.netlify.app/about.html">About Us</a></li>
-                                    <li><a href="https://investmentandstrategy.netlify.app/index.html#news">News</a></li>
+                                    <li><a href="https://investmentandstrategy.netlify.app/blog-details.html">News</a></li>
                                     <li><a href="https://investmentandstrategy.netlify.app/index.html#faq">FAQ's</a></li>
                                     <li><a href="https://investmentandstrategy.netlify.app/testimonial.html">Testimonials</a></li>
                                 </ul>
