--- a/product-details.html
+++ b/product-details.html
@@ -832,8 +832,8 @@
 </div>
 <!-- CALL TO ACTION END -->
 
-<!-- FOOTER AREA START -->
-<footer class="ltn__footer-area  ">
+ <!-- FOOTER AREA START -->
+ <footer class="ltn__footer-area  ">
     <div class="footer-top-area  section-bg-2 plr--5">
         <div class="container-fluid">
             <div class="row">
@@ -873,7 +873,7 @@
                         <div class="footer-menu">
                             <ul>
                                 <li><a href="https://investmentandstrategy.netlify.app/about.html">About Us</a></li>
-                                <li><a href="https://investmentandstrategy.netlify.app/index.html#news">News</a></li>
+                                <li><a href="https://investmentandstrategy.netlify.app/blog-details.html">News</a></li>
                                 <li><a href="https://investmentandstrategy.netlify.app/index.html#faq">FAQ's</a></li>
                                 <li><a href="https://investmentandstrategy.netlify.app/testimonial.html">Testimonials</a></li>
                             </ul>
