--- a/about.html
+++ b/about.html
@@ -598,7 +598,7 @@
                         <div class="ltn__blog-meta">
                             <ul>
                                 <li class="ltn__blog-author">
-                                    <a href="#"><i class="far fa-user"></i>by: Admin</a>
+                                    <a href="#"><i class="far fa-user"></i>by: I&S </a>
                                 </li>
                                 <li class="ltn__blog-tags">
                                     <a href="#"><i class="fas fa-tags"></i>Decorate</a>
@@ -629,7 +629,7 @@
                         <div class="ltn__blog-meta">
                             <ul>
                                 <li class="ltn__blog-author">
-                                    <a href="#"><i class="far fa-user"></i>by: Admin</a>
+                                    <a href="#"><i class="far fa-user"></i>by: I&S </a>
                                 </li>
                                 <li class="ltn__blog-tags">
                                     <a href="#"><i class="fas fa-tags"></i>Interior</a>
@@ -660,7 +660,7 @@
                         <div class="ltn__blog-meta">
                             <ul>
                                 <li class="ltn__blog-author">
-                                    <a href="#"><i class="far fa-user"></i>by: Admin</a>
+                                    <a href="#"><i class="far fa-user"></i>by: I&S </a>
                                 </li>
                                 <li class="ltn__blog-tags">
                                     <a href="#"><i class="fas fa-tags"></i>Estate</a>
@@ -691,7 +691,7 @@
                         <div class="ltn__blog-meta">
                             <ul>
                                 <li class="ltn__blog-author">
-                                    <a href="#"><i class="far fa-user"></i>by: Admin</a>
+                                    <a href="#"><i class="far fa-user"></i>by: I&S </a>
                                 </li>
                                 <li class="ltn__blog-tags">
                                     <a href="#"><i class="fas fa-tags"></i>Room</a>
@@ -722,7 +722,7 @@
                         <div class="ltn__blog-meta">
                             <ul>
                                 <li class="ltn__blog-author">
-                                    <a href="#"><i class="far fa-user"></i>by: Admin</a>
+                                    <a href="#"><i class="far fa-user"></i>by: I&S </a>
                                 </li>
                                 <li class="ltn__blog-tags">
                                     <a href="#"><i class="fas fa-tags"></i>Trends</a>
@@ -769,8 +769,8 @@
 </div>
 <!-- CALL TO ACTION END -->
 
-<!-- FOOTER AREA START -->
-<footer class="ltn__footer-area  ">
+ <!-- FOOTER AREA START -->
+ <footer class="ltn__footer-area  ">
     <div class="footer-top-area  section-bg-2 plr--5">
         <div class="container-fluid">
             <div class="row">
@@ -810,7 +810,7 @@
                         <div class="footer-menu">
                             <ul>
                                 <li><a href="https://investmentandstrategy.netlify.app/about.html">About Us</a></li>
-                                <li><a href="https://investmentandstrategy.netlify.app/index.html#news">News</a></li>
+                                <li><a href="https://investmentandstrategy.netlify.app/blog-details.html">News</a></li>
                                 <li><a href="https://investmentandstrategy.netlify.app/index.html#faq">FAQ's</a></li>
                                 <li><a href="https://investmentandstrategy.netlify.app/testimonial.html">Testimonials</a></li>
                             </ul>
