--- a/about.html
+++ b/about.html
@@ -326,9 +326,9 @@
                         <div class="ltn__callout bg-overlay-theme-05  mt-30">
                             <p>"We are wealth creation and property investment experts" </p>
                         </div>
-                        <div class="btn-wrapper animated">
+                        <!-- <div class="btn-wrapper animated">
                             <a href="service.html" class="theme-btn-1 btn btn-effect-1">OUR SERVICES</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
